  (Stephen Dolan, review by Leo White)

- #8776, #10624: Fix compilation time regression introduced in 4.08
  (Nicolás Ojeda Bär, fix by Leo White, report by Alain Frisch, review by Thomas
  Refis)

- #10618: Expose more Pprintast functions
  (Guillaume Petiot, review by Gabriel Scherer)

- #10637: Outcometree: introduce a record type for constructors
  (Gabriel Scherer, review by Thomas Refis)

### Build system:

### Bug fixes:

- #10473: Add CFI directives to RISC-V runtime and asmcomp.
  This allows stacktraces to work in gdb through C and OCaml calls.
  (Edwin Török, review by Nicolás Ojeda Bär and Xavier Leroy)

- #10539: Field kinds should be kept when copying types
  Losing the sharing meant that one could desynchronize them between several
  occurrences of self, allowing a method to be both public and hidden,
  which broke type soundness.
  (Jacques Garrigue, review by Leo White)

- #10542: Fix detection of immediate64 types through unboxed types.
  (Leo White, review by Stephen Dolan and Gabriel Scherer)

- #10590: Some typechecker optimisations
  (Stephen Dolan, review by Gabriel Scherer and Leo White)

- #10633: Stack overflow recovery in ocamlopt for AMD64/Linux and ARM/Linux
  was not restoring the minor heap pointer correctly
  (Stephen Dolan, review by Xavier Leroy)


OCaml 4.13.0
-------------

### Progress towards Multicore:

- #10039: Safepoints
  Add poll points to native generated code. These are effectively
  zero-sized allocations and fix some signal and remembered set
  issues. Also multicore prerequisite.
  (Sadiq Jaffer, Stephen Dolan, Damien Doligez, Xavier Leroy,
   Anmol Sahoo, Mark Shinwell, review by Damien Doligez, Xavier Leroy,
   and Mark Shinwell)

- #9876: do not cache the young_limit GC variable in a processor register.
  This affects the ARM64, PowerPC and RISC-V ports, making signal handling
  and minor GC triggers more reliable, at the cost of a small slowdown.
  (Xavier Leroy, review by Nicolás Ojeda Bär)
